Version 3.90 - 2019.01.09
-------------------------
Increased size of 'spass' buffer in affixtrain.cpp. 
Write information to a file, not stdout.
Some signed/unsigned issues solved.

Version 3.89 - 2018.06.28
-------------------------
Increased size of line buffers in testrules.cpp.

Version 3.88 - 2018.06.28
-------------------------
Another cause of (null) problem found and fixed. (options->tag == 0 is legal
but generated file names like pairsToTrainInNextPass.1(null).pass1 .)

Version 3.87 - 2018.03.14
-------------------------
Cause of (null) problem found and fixed it.

Version 3.86 - 2018.03.11
-------------------------
The string "(null)" appeared in the file names starting with "evaluation" and
some others, where the string "NoTags" was expected. Currently there is no
explanation for this bug. Inserted an assert() to check optionStruct::POStag().

Version 3.85 - 2018.02.28
-------------------------
The rewritten node::Prune function was able to prune (delete) `this' node.
As a consequence the top root could be deleted, which should never happen. The
fix is to call Prune on the child of the top node instead of on the top node
itself. One can still use the old Prune function by setting #define OLDPRUNE
in settingsaffixtrain.h. However, the old Prune function is more recursive and
can cause stack overflow. Thanks to Marek Medveď for pointing out the problem.

Version 3.84 - 2018.02.17
-------------------------
Fixed errors in prediction of OOV word ambiguity. 
Numbers were only derived from last run in cross validation, but normalized as
if all runs had been counted. Also, the factor 0.5 in the computation of true
positives and false negatives has been dropped. This factor had been introduced
to compensate for the fact that ambiguous words occur twice (or more often) in
the test set. However, other statistics did count with respect to number of
test lines, and did not "corrigate" for ambiguity.

Made start with conversion of recursive calls to iterations. 
