@@ -3,6 +3,7 @@ Version 3.90 - 2019.01.09
 Increased size of 'spass' buffer in affixtrain.cpp. 
 Write information to a file, not stdout.
 Some signed/unsigned issues solved.
+Set minimum no. of lines in fractional training file to 1.
 
 Version 3.89 - 2018.06.28
 -------------------------
